--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.54.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.0.2",
+    "react-text-mask": "^5.5.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-input-mask": "^3.0.6",
+    "@types/react-text-mask": "^5.4.14",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
