--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.1.1",
     "react-text-mask": "^5.5.0",
     "yup": "^1.6.1",
     "zustand": "^5.0.2"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-input-mask": "^3.0.6",
