--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "antd": "^5.22.6",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
