--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL =http://100.115.75.21:3000/api
+# VITE_API_URL = http://100.115.75.21:3000/api
+VITE_API_URL = http://localhost:3000/api
